Add timer logic for the yew app.

--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "time_tracker"
+name = "time_tracker_ui"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 yew = "0.19"
+gloo = "0.7"
