--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+print_duration = "1.0.1"
 yew = "0.19"
 gloo = "0.7"
 wasm-bindgen = "0.2.81"
