--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 print_duration = "1.0.1"
 yew = "0.19"
 gloo = "0.7"
+instant = "0.1.12"
 wasm-bindgen = "0.2.81"
 stylist = { version = "0.10.1", features = ["yew"] }
