--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-print_duration = "1.0.1"
-yew = "0.19"
-gloo = "0.7"
-instant = "0.1.12"
-wasm-bindgen = "0.2.81"
-stylist = { version = "0.10.1", features = ["yew"] }
+yew = { version = "0.20", features = ["csr"] }
+stylist = { version = "0.12", features = ["yew"] }
+print_duration = "1.0"
+gloo = "0.8"
+instant = "0.1"
+wasm-bindgen = "0.2"
 
 [workspace]
 members = ["src-tauri"]
