Refactor code to better ways.
- Use functional components.
- Use Events from Tauri for Timer.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,6 +3,7 @@ name = "time_tracker"
 version = "0.1.0"
 description = "Simple Time Tracker App"
 license = ""
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
