--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 yew = { version = "0.20", features = ["csr"] }
-stylist = { version = "0.12", features = ["yew"] }
 print_duration = "1.0"
-gloo = "0.8"
-instant = "0.1"
 wasm-bindgen = "0.2"
+js-sys = "0.3"
+wasm-bindgen-futures = "0.4"
+gloo-utils = { version = "0.1", features = ["serde"]}
+serde = { version = "1.0", features = ["derive"] }
 
 [workspace]
 members = ["src-tauri"]
