--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 yew = { version = "0.20", features = ["csr"] }
+stylist = { version = "0.12", features = ["yew_use_style"] }
+web-sys = { version = "0.3", features = ["MediaQueryList", "Window", "HtmlMetaElement"] }
 print_duration = "1.0"
 wasm-bindgen = "0.2"
 js-sys = "0.3"
